# coremark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  coremark.c  coremark.ewrmod  coremark.wrmod
